# solwordle

./: .gitignore  Cargo.toml  filter.py
src/: levenshtein.rs  main.rs  models.rs  routes.rs  search.rs  tests.rs  utils.rs
web/: index.html  script.js  style.css
words/: german4.txt  german6.txt  german7.txt  german8.txt  test.txt
